<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tè_verde"
    tools:context=".activity.LoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:alpha="0.9"
        android:elevation="40dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ImageStyle_Corners_Rounded"
        app:srcCompat="@drawable/meetkick_logo"
        app:strokeColor="@color/verde"
        app:strokeWidth="10dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintVertical_bias="0.552">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Benvenuto!"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            app:fontFamily="@font/mclaren"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Inserisci le tue credenziali"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            app:fontFamily="@font/mclaren"
            tools:ignore="HardcodedText" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:importantForAutofill="no"
            android:padding="5dip"
            android:textColor="#000000"
            android:textColorHint="#8C8686"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            tools:ignore="HardcodedText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_form"
                android:fontFamily="@font/mclaren"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="19sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="5dip"
            android:textColor="#000000"
            android:textColorHint="#8C8686"
            app:endIconDrawable="@drawable/custom_eye"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="HardcodedText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_form"
                android:fontFamily="@font/mclaren"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="19sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/mclaren"
            android:gravity="center_vertical"
            android:text="Login"
            android:textAlignment="center"
            app:backgroundTint="#4CAF50"
            tools:ignore="HardcodedText,RtlCompat,TextContrastCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Non hai ancora un account?"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            app:fontFamily="@font/mclaren"
            app:layout_constraintStart_toStartOf="@id/login_btn"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/registrati"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dp"
            android:text="@string/registrati"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            app:fontFamily="@font/mclaren" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>