...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.CreateEventActivity">

    <TextView
        android:id="@+id/crea_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mclaren"
        android:text="Crea il tuo evento"
        android:textColor="@color/white"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crea_evento">

        <ScrollView
            android:id="@+id/sv_new_event"
            android:layout_width="match_parent"
            android:layout_height="536dp"
            android:layout_above="@id/ll_confirm"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
...
